# ipfs-risc0

./: .gitignore  Cargo.toml  README.md  remappings.txt
apps/: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  players.rs
contracts/: Players.sol  Team.sol
methods/: Cargo.toml
methods-player/: Cargo.toml  build.rs
methods-player/guest/: Cargo.toml
methods-player/src/: lib.rs
methods-team/: Cargo.toml  build.rs
methods-team/guest/: Cargo.toml
methods-team/src/: lib.rs
methods/common/src/: cid.rs  lib.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
script/: Deploy.s.sol
tests/: Players.t.sol
