[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
common = { path = "../methods/common" }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true, features = ["client"] }
risc0-steel = { workspace = true, features = ["host"] }
tokio = { version = "1.35", features = ["full"] }
url = { workspace = true }
