[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[[bin]]
name = "verify-cid"
path = "src/bin/verify_cid.rs"

[workspace]

[dependencies]
common = { path = "../common" }
alloy-primitives = { version = "=0.8.5", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.5" }
risc0-zkvm = { version = "1.1", default-features = false, features = ['std'] }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum.git", branch = "release-1.1" }

[profile.release]
lto = "thin"
